--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -18,6 +19,7 @@
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "next-images": "^1.8.4",
+    "prettier": "^2.8.2",
     "prisma": "^4.6.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
@@ -30,6 +32,12 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "autoprefixer": "^10.4.13",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.7.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
