--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "next-images": "^1.8.4",
-    "prettier": "^2.8.2",
     "prisma": "^4.6.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
@@ -40,6 +39,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.19",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4"
   }
 }
