--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "^13.0.3",
     "@prisma/client": "^4.6.1",
     "chart.js": "^4.0.1",
+    "firebase": "^9.22.2",
     "framer-motion": "^7.6.12",
     "howler": "^2.2.3",
     "next": "13.0.3",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-inview": "^4.5.0",
     "react-input-slider": "^6.0.1",
     "url-loader": "^4.1.1",
